--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Aaron
-subtitle:
-description:
+title: Aaron's blog
+subtitle: 
+description: 
 author: 王岩
 language: zh-Hans
 timezone:
